# SpatialData.js

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  RELEASE.md  biome.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.base.ts  vitest.config.ts
.changeset/: avivatorish-channel-config-equality.md  avivatorish-channel-stats-helpers.md  avivatorish-stats-hook.md  bump-viv-0-22.md  config.json  consume-resource-resolvers.md  cull-out-of-bounds-label-tiles.md  default-coordinate-system-selection.md  legal-moles-design.md  mdv-channel-viv-passthrough.md  mdv-prerelease.md  neat-bears-try.md  points-render-path-engine.md  pre.json  proud-candies-smell.md  render-stack-events.md  shapes-nonblocking-flat-polygon-layer.md  shy-parts-push.md  solid-codec-worker.md  spatialcanvas-picking-perf-and-rules-of-react.md  steady-labels-transform.md  switch-openjph-wasm.md  vis-public-api-exports.md
.claude/: launch.json
.cursor/: settings.json
.cursor/rules/: typescript.mdc
.github/workflows/: docs.yml  release.yml  test.yml
dev_scripts/conformance-dingus/: README.md  baseline-results.tsv  dingus.sh  dingus.ts  pyproject.toml  run-conformance.sh
docs/: docusaurus.config.ts  package.json  parquet-wasm-limitations.md
docs/adr/: 0001-render-stack-owned-by-layers.md  0002-spatially-aware-vector-loading.md  0003-points-render-resource.md  0004-resource-resolver-owned-by-core.md  0005-memory-accounting-before-management.md
docs/blog/: authors.yml  build_glitch.md  core_dependencies.md  initial_design_notes.md  sketch.mdx  transformations_attrs.md  vitessce_porting_ts.md
docs/docs/: demo.mdx  intro.md  intro.mdx  sketch.tsx  worker-bundling.mdx
docs/plans/: layer-data-engine-decomposition.md  parquet-io-error-handling.md  points-mvp-and-roadmap.md  points-preload-feature-filter-status.md  points-redesign-punchlist.md  resource-resolver-handoff.md  shapes-nonblocking-tiled-loading.md  step1-consumption-tactics.md
docs/src/pages/: index.tsx
python/scripts/: generate_fixtures.py  validate_datasets.py
python/spatialdata-codec-writer/: README.md  pyproject.toml
python/spatialdata-codec-writer/docs/: htj2k-wasm-encode-design.md  multi-component-codec-findings.md
python/spatialdata-codec-writer/scripts/: fixture_writer.py  generate_codec_fixtures.py  htj2k_fixtures.py  mandelbulb_fixtures.py  provenance.py  synthetic_images.py  write_synthetic.py
python/spatialdata-codec-writer/src/spatialdata_codec_writer/: __init__.py  cli.py  codecs.py  htj2k_encode.py  htj2k_fixtures.py  htj2k_wasm.py  recompress.py  synthetic_cli.py  synthetic_images.py  writer.py
python/spatialdata-codec-writer/src/spatialdata_codec_writer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/spatialdata-codec-writer/tests/: test_htj2k_encode.py  test_htj2k_encode_demo.py  test_htj2k_quality.py  test_recompress.py  test_synthetic_images.py  test_write_synthetic.py  test_writer.py
python/spatialdata-experimental-writer/: README.md  pyproject.toml
python/spatialdata-experimental-writer/scripts/: benchmark_points_index.py
python/spatialdata-experimental-writer/src/spatialdata_experimental_writer/: __init__.py  cli.py  errors.py  index_permutations.py  points.py  runners.py  verify.py  zarr.py
python/spatialdata-experimental-writer/src/spatialdata_experimental_writer/tui/: app.py  models.py  screens.py
python/spatialdata-experimental-writer/tests/: test_integration.py  test_points.py  test_verify.py  test_zarr.py
python/spatialdata-integrity/: .gitignore  README.md  example_usage.py  pyproject.toml  test_known_good.py
python/spatialdata-integrity/src/spatialdata_integrity/: __init__.py  checker.py  cli.py
scripts/: cors-proxy.js  dev-process-utils.mjs  dev-stop.mjs  encode-htj2k-plane.mjs  fixture-server-defaults.mjs  fixture-server-port.mjs  pack-local.sh  test-server.js  validate-all.sh  validate-datasets-js.js  vendor-openjph-for-python.mjs
(+29 files in other folders)
