[project]
name = "spatialdata-codec-writer"
version = "0.1.0"
description = "Reference writer for SpatialData/OME-Zarr image stores using optional image codecs"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SpatialData.ts contributors" }]
dependencies = [
    "dask[array]>=2025.0",
    "imagecodecs>=2025.8.2",
    "numcodecs>=0.16",
    "numpy>=2.0",
    "ome-zarr>=0.13",
    "spatialdata>=0.7.2",
    "zarr>=3.1",
]

[project.scripts]
spatialdata-codec-writer = "spatialdata_codec_writer.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

