[project]
name = "spatialdata-integrity"
version = "0.1.0"
description = "Utilities for checking integrity of SpatialData Zarr stores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zarr>=3.0.0",
    "spatialdata>=0.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
check-spatialdata = "spatialdata_integrity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spatialdata_integrity"]

